--- a/doc/RencanaKerja/document.tex
+++ b/doc/RencanaKerja/document.tex
@@ -58,6 +58,8 @@ Rumusan masalah yang akan dibahas sebagai berikut:
 	\item Bagaimana menentukan pertanyaan survei dan menganalisa implementasi yang memungkinkan?
 	\item Bagaimana mencari \textit{bug} yang dilaporkan dalam program? 
 	\item Bagaimana mengimplementasi penempatan \textit{chart} agar tidak memberikan informasi yang berlebihan ke pengguna?
+	\item Bagaimana melakukan tes setelah memperbarui dan mengganti \textit{libraries} untuk memastikan fungsi dapat berjalan dengan lancar?
+
 \end{itemize}
 
 \section{Tujuan}
@@ -66,6 +68,7 @@ Tujuan dari penulisan topik skripsi ini sebagai berikut:
 	\item Menambahkan fitur baru yang diinginkan oleh pengguna
 	\item Memperbaiki \textit{bug} yang dilaporkan oleh pengguna
 	\item Tersedianya statistik manajemen cetak transkrip dan manajemen perubahan kuliah secara visual
+	\item Memperbarui dan mengganti \textit{libraries} serta memastikan semua fungsi berjalan dengan lancar.
 \end{itemize}
 
 \section{Deskripsi Perangkat Lunak}
