--- a/doc/DokumenSkripsi/Bab/bab1.tex
+++ b/doc/DokumenSkripsi/Bab/bab1.tex
@@ -4,41 +4,78 @@
    
 \section{Latar Belakang}
 \label{sec:label}
+ Berkembangnya FTIS UNPAR disertai dengan tersedianya semakin banyak matakuliah membawa permasalahan baru di bagian bidang administrasi. Jika dosen ingin meniadakan perkuliahan atau mengganti perkuliahan akan tidak efisien jika melakukan panggilan atau \textit{email} ke pihak tata usaha. Hal tersebut akan membuat pihak tata usaha menjadi kewalahan untuk mengolah informasi tersebut. Mahasiswa yang ingin melakukan pengajuan transkrip juga akan diberatkan karena mahasiswa yang ingin melakukan pengajuan transkrip maka mahasiswa harus datang ke tata usaha melakukan pengajuan dan menunggu beberapa hari untuk mendapatkan hasil transkrip tersebut. Jika mahasiswa yang tidak memiliki perkuliahan pada hari tersebut terpaksa harus datang hanya untuk melakukan pengajuan hal ini selain membuang waktu juga membuang biaya transportasi.
 
-Bagian ini akan diisi dengan apa yang melatarbelakangi pembuatan template skripsi ini.
-Termasuk juga masalah-masalah yang akan dihadapi untuk membuatnya, termasuk kurangnya kemampuan penguasaan \LaTeX{} sehingga template ini dibuat dengan mengandalkan berbagai contoh yang tersebar di dunia maya, yang digabung-gabung menjadi satu jua.
-Bagian lain juga akan dilengkapi, untuk sementara diisi dengan lorem ipsum versi bahasa inggris.
 
-\dtext{5-10}
+\textit{Bluetape}\footnote{\label{ft:bluetape}\url{https://github.com/ftisunpar/BlueTape}} adalah aplikasi web yang dibuat oleh dosen dan mahasiswa informatika. Aplikasi ini dibuat menggunakan \textit{Hypertext Preprocessor} atau lebih dikenal dengan \textit{PHP}\footnote{\url{https://www.php.net/}}. \textit{Database management system} atau DBMS yang digunakan adalah \textit{MYSQL}\footnote{\url{https://www.mysql.com/}}.\textit{ Bluetape} menggunakan \textit{framework Bootstrap}\footnote{\url{https://getbootstrap.com/}} dan \textit{Codeigniter}\footnote{\url{https://codeigniter.com/}}. \textit{ Bluetape} berguna untuk membantu kegiatan administrasi FTIS UNPAR. Aplikasi ini dapat melakukan \textit{transkrip request/manage} dan \textit{request perubahan kuliah/manage}. Sehingga jika dosen ingin meniadakan/mengganti perkuliahan dapat dilakukan dengan mudah tanpa harus membuat email ataupun melakukan panggilan. Mahasiswa dapat melakukan permintaan transkrip nilai tanpa tatap muka sehingga mahasiswa hanya perlu datang ke UNPAR saat ingin mengambil hasil dari transkrip tersebut, Mahasiswa juga dapat melihat jadwal dosen. Dengan adanya sistem otomasi pada kegiatan administrasi tentunya pekerjaan tata usaha menjadi lebih ringan.
+
+
+Aplikasi \textit{Bluetape}\footref{ft:bluetape} digunakan oleh mahasiswa FTIS, dosen ,dan tata usaha. Dari pengguna tersebut dilaporkan fitur untuk ekspor ke XLS pada halaman entri jadwal dosen menghasilkan file yang \textit{corrupt}. Ada juga laporan bahwa mahasiswa npm baru tidak dapat melihat jadwal dosen karena tidak memiliki hak akses, yang seharusnya menjadi hak akses mahasiswa. Aplikasi \textit{Bluetape}\footref{ft:bluetape} dapat mengelola permintaan transkrip dan permintaan perubahan kuliah tetapi aplikasi ini tidak menampilkan statistik berapa banyak permintaan transkrip  dan permintaan perubahan kuliah yang diterima atau ditolak. Sehingga fakultas tidak dapat mengevaluasi berapa permintaan transkrip yang diterima atau ditolak, berapa banyak permintaan pergantian perkuliahan yang diterima atau ditolak.
+
+
+Pada topik skripsi ini akan dilakukan analisis untuk perbaikan dari kekurangan aplikasi \textit{Bluetape}\footref{ft:bluetape}, penambahan fitur statistik untuk permintaan transkrip dan permintaan perubahan kuliah yang kemudian akan diimplementasikan. Selanjutnya akan dibuat survei kepada pengguna aplikasi \textit{Bluetape}\footref{ft:bluetape} terkait fitur yang diinginkan kedepannya dan melakukan analisa dilanjutkan dengan implementasi dari fitur tersebut ke dalam aplikasi \textit{Bluetape}\footref{ft:bluetape}. 
+
+
+Sebelum itu harus dianalisa bagaimana memasang aplikasi ini pada komputer, mendaftar pada \textit{google cloud technology} untuk melakukan login menggunakan akun \textit{gmail} dengan memanfaatkan \textit{OAuth} yang dimiliki oleh \textit{google}. Diperlukan untuk merubah \textit{ file} yang mengatur \textit{role} sebagai pihak dosen atau tata usaha agar dapat membuat skenario sebagai dosen atau tata usaha.
+
+
 
 \section{Rumusan Masalah}
 \label{sec:rumusan}
-Bagian ini akan diisi dengan penajaman dari masalah-masalah yang sudah diidentifikasi di bagian sebelumnya. 
+Rumusan masalah yang telah diidentifikasi sebagai berikut:
+\begin{enumerate}
+	\item Bagaimana menentukan pertanyaan survei dan menganalisa implementasi yang memungkinkan?
+	\item Bagaimana mencari \textit{bug} yang dilaporkan dalam program?
+	\item Bagaimana mengimplementasi penempatan \textit{chart} agar tidak memberikan informasi yang berlebihan
+	ke pengguna?
+	\item Bagaimana melakukan tes setelah memperbarui dan mengganti \textit{libraries} untuk memastikan fungsi dapat berjalan dengan lancar?
 
-\dtext{6}
+\end{enumerate}
 
 \section{Tujuan}
 \label{sec:tujuan}
-Akan dipaparkan secara lebih terperinci dan tersturkur apa yang menjadi tujuan pembuatan template skripsi ini
+Tujuan pembuatan dan penulisan skripsi ini adalah sebagai berikut:
+\begin{enumerate}
+	\item Menambahkan fitur yang diinginkan oleh pengguna
+	\item Memperbaiki \textit{bug} yang dilaporkan oleh pengguna.
+	\item Tersedianya statistik manajemen cetak transkrip dan manajemen perubahan kuliah secara visual.
+	\item Memperbarui dan mengganti \textit{libraries} serta memastikan semua fungsi berjalan dengan lancar.
 
-\dtext{7}
+\end{enumerate}
 
 \section{Batasan Masalah}
 \label{sec:batasan}
-Untuk mempermudah pembuatan template ini, tentu ada hal-hal yang harus dibatasi, misalnya saja bahwa template ini bukan berupa style \LaTeX{} pada umumnya (dengan alasannya karena belum mampu jika diminta membuat seperti itu)
+Penulisan dan pembuatan skripsi ini memiliki batasan sebagai berikut:
+\begin{enumerate}
+	\item Penelitian ini tidak mendeploy aplikasi pada server.
+	\item Fitur \textit{chart} statistik tidak membagi berdasarkan nama dosen/mahasiswa yang melakukan \textit{request} tersebut.
+	
+\end{enumerate}
 
-\dtext{8}
 
 \section{Metodologi}
 \label{sec:metlit}
-Tentunya akan diisi dengan metodologi yang serius sehingga templatenya terkesan lebih serius.
+Metedologi yang akan dilakukan pada penulisan skripsi ini sebagai berikut:
 
-\dtext{9}
+\begin{enumerate}
+	\item Menganalisa \textit{Bluetape} dan alur kode.
+	\item Menganalisa \textit{bug} yang membuat beberapa mahasiswa tidak dapat melihat jadwal dosen.
+	\item Melakukan \textit{refactor} untuk kode--kode yang menggunakan \textit{libraries} sebelumnya.
+	\item Menganalisa dan mengimplementasi \textit{chart} statistik untuk data transkrip dan perubahan kuliah.
+	\item Membuat kuisioner ke pengguna \textit{Bluetape} untuk fitur tambahan.
+	\item Merancang dan mengimplementasi fitur tambahan tersebut.
+	\item Melakukan pengujian.
+	\item Menulis dan menyelesaikan dokumen skripsi.
+\end{enumerate}
 
 \section{Sistematika Pembahasan}
 \label{sec:sispem}
-Rencananya Bab 2 akan berisi petunjuk penggunaan template dan dasar-dasar \LaTeX.
-Mungkin bab 3,4,5 dapt diisi oleh ketiga jurusan, misalnya peraturan dasar skripsi atau pedoman penulisan, tentu jika berkenan.
-Bab 6 akan diisi dengan kesimpulan, bahwa membuat template ini ternyata sungguh menghabiskan banyak waktu.
-
-\dtext{10}
+Rencana pembahasan penelitian ini sebagai berikut:
+\begin{description}
+	\item[Bab 1] Pendahuluan membahas hal--hal dasar pada skripsi yang berisi latar belakang, rumusan masalah, tujuan, batasan masalah, metodologi, sistematika pembahasan.
+	\item[Bab 2] Landasan teori berisi dasar--dasar teori meliputi : \textit{Codeigniter}, \textit{PHPspreadsheet}, Aplikasi \textit{bluetape}.
+	\item[Bab 3] Analisis akan berisi alur kode terhadap fitur yang mengalami \textit{bug}, kode yang mengalami \textit{refactor} untuk pembaharuan phpexcel ke phpspreadsheet, struktur tabel yang digunakan untuk fitur statistik.
+	\item[Bab 4] Perancangan berisi perancangan antarmuka untuk statistik manajemen transkrip, manajemen jadwal kuliah, dan fitur tambahan berserta penempatan untuk \textit{controller} dan \textit{model}.  
+	\item[Bab 5] Implementasi dan pengujian berisi hasil-hasil implementasi dan pengujian secara fungsional dan eksperimental.
+	\item[Bab 6] Kesimpulan dan saran berisi kesimpulan dari penelitian ini dan saran untuk pengembangan berikutnya.
+\end{description}
