--- a/doc/DokumenSkripsi/data.tex
+++ b/doc/DokumenSkripsi/data.tex
@@ -195,9 +195,9 @@
 % !!Lihat singkatan pembimbing dan penguji anda di file dosen.tex!!
 % Petunjuk: hilangkan tanda << & >>, dan isi sesuai dengan data anda
 %=============================================================================
-\namanpm{<<Nama Lengkap>>}{<<10 digit NPM UNPAR>>}
-\tanggal{<<tanggal>>}{<<bulan>>}{<<tahun>>}         %isi bulan dengan angka
-\pembimbing{<<pembimbing utama/1>>}{<<pembimbing pendamping/2>>}    
+\namanpm{Stephen Hadi}{2017730016}
+\tanggal{<<tanggal>>}{<<bulan>>}{2020}         %isi bulan dengan angka
+\pembimbing{Pascal Alfadian Nugroho}{}    
 \penguji{<<penguji 1>>}{<<penguji 2>>} 
 %=============================================================================
 
@@ -214,8 +214,8 @@
 % - gunakan \texorpdfstring{\\}{} untuk pindah ke baris baru
 % - judul TIDAK ditulis dengan menggunakan huruf besar seluruhnya !!
 %=============================================================================
-\judulINA{<<Judul Bahasa Indonesia>>}
-\judulENG{<<Judul Bahasa Inggris>>}
+\judulINA{Analisa Kekurangan dan Implementasi Perbaikan Perangkat Lunak BlueTape}
+\judulENG{Analysis on BlueTape Software Drawbacks and Fix the Implementation}
 %_____________________________________________________________________________
 %=============================================================================
 % 								BAGIAN X
@@ -275,6 +275,7 @@
 \hyphenation{fi-si-ka}
 \hyphenation{tek-nik}
 \hyphenation{in-for-ma-ti-ka}
+\hyphenation{me-mung-kin-kan}
 %=============================================================================
 
 %_____________________________________________________________________________
