--- a/doc/DokumenSkripsi/skripsi.tex
+++ b/doc/DokumenSkripsi/skripsi.tex
@@ -68,6 +68,8 @@
 \usepackage{xstring}%manipulasi string, strchar, ifstreq
 \usepackage[table]{xcolor}%untuk kode program
 \usepackage{pgffor}% untuk foreach
+\usepackage{indentfirst}
+\usepackage{footmisc}
  
 \newcommand{\vtemplateauthor}{lionov}
 \newcommand{\dtext}[1]{{\color{lightgray} \lipsum[#1]}}%command untuk dummy text
