--- a/doc/DokumenSkripsi/Bab/bab2.tex
+++ b/doc/DokumenSkripsi/Bab/bab2.tex
@@ -2,12 +2,17 @@
 \chapter{Landasan Teori}
 \label{chap:teori}
 
-\section{Skripsi}
-\label{sec:skripsi} 
- 
-Rencananya akan diisi dengan penjelasan umum mengenai buku skripsi.
 
-\dtext{11-12} 
+Pada bab ini akan berisi landasan-landasan teori yang dipakai pada penelitian ini.
+
+\section{Code Igniter}
+\label{sec:codeigniter}
+
+
+CodeIgniter\cite{codeigniter3} adalah \textit{framework} untuk pembuat website yang menggunakan \textit{PHP}. \textit{CodeIgniter} mempermudah \textit{developer} untuk meminimalisir penggunaan kode untuk mengakses suatu fungsi. Seperti untuk mengambil data pada \textit{database}, mengakses file \textit{php} lainnya. Penggunaan \textit{framework CodeIgniter} juga mudah.\textit{Developer} tidak perlu melakukan banyak konfigurasi--konfigurasi saat melakukan \textit{setup}.\textit{CodeIgniter} juga memberikan dokumentasi yang lengkap. Permasalahan \textit{routing}  sudah diselesaikan oleh \textit{framework} ini. \textit{ Framework} ini secara otomatis akan mengarah ke file dalam \textit{directory controllers} sesuai dengan \textit{path-abempty} pada \textit{URI}  dan menjalankan \textit{method} \codefont{index()}. 
+ 
+
+
 
 \section{\LaTeX}
 \label{sec:latex}
