--- a/doc/DokumenSkripsi/data.tex
+++ b/doc/DokumenSkripsi/data.tex
@@ -285,5 +285,6 @@
 % Tambahkan perintah yang anda buat sendiri di sini 
 %=============================================================================
 \renewcommand{\vtemplateauthor}{lionov}
+\newcommand{\codefont}[1]{\small \texttt{#1}}
 \pgfplotsset{compat=newest}
 %=============================================================================
