--- a/doc/DokumenSkripsi/referensi.bib
+++ b/doc/DokumenSkripsi/referensi.bib
@@ -311,6 +311,13 @@
 	organization= {International Telecommunications Union},	
 	address 	= {Geneva, Switzerland},
 }
+@manual{codeigniter3,
+	number = {Version 3.1.11},
+	title = {CodeIgniter 3},
+	year = {2019},
+	organization = {British Columbia Institute of Technology},
+	address = {3700 Willingdon Ave}
+}
 
 @manual{unicode:16:stdv9,
 	number 		= {Version 9.0.0},
