--- a/doc/DokumenSkripsi/skripsi.tex
+++ b/doc/DokumenSkripsi/skripsi.tex
@@ -70,6 +70,7 @@
 \usepackage{pgffor}% untuk foreach
 \usepackage{indentfirst}
 \usepackage{footmisc}
+\usepackage{courier}
  
 \newcommand{\vtemplateauthor}{lionov}
 \newcommand{\dtext}[1]{{\color{lightgray} \lipsum[#1]}}%command untuk dummy text
