--- a/doc/RencanaKerja/document.tex
+++ b/doc/RencanaKerja/document.tex
@@ -86,13 +86,15 @@ Perangkat lunak akhir akan memiliki fitur sebagai berikut:
 Bagian-bagian pekerjaan skripsi ini adalah sebagai berikut :
 	\begin{enumerate}
 		\item Memahami dan mengerti cara kerja \textit{framework Code Igniter}
-		\item Memahami penggunaan \textit{Framework Bootstrap}
-		\item Memastikan semua fitur berjalan setelah \textit{update libraries} 
+		\item Memahami penggunaan \textit{Framework Bootstrap}.
+		\item Memastikan semua fitur berjalan setelah \textit{update libraries} .
 		\item Memperbaiki \textit{bug} mahasiswa baru tidak dapat Melihat jadwal dosen
+		\item Menganalisa dan merancang fitur chart pada manajemen cetak transkrip dan manajemen perubahan kuliah.
 		\item Mengimplementasi fitur chart pada manajemen cetak transkrip dan manajemen perubahan kuliah
-		\item Melakukan survei
-		\item Mengimplementasi hasil survei		
-		\item Menulis dokumen skripsi
+		\item Melakukan survei.
+		\item Menganalisa dan merancang hasil survei.
+		\item Mengimplementasi hasil survei	.	
+		\item Menulis dokumen skripsi.
 	\end{enumerate}
 
 \section{Rencana Kerja}
@@ -111,13 +113,17 @@ Rencana kerja yang akan diambil pada skripsi 1 dan skripsi 2 sebagai berikut:
 		\hline
 		4 & 8 & 8 & 0 & \\
 		\hline
-		5 & 15 & 15 & 0 & \\
+		5 & 7 & 7 & 0 &\\
 		\hline
-		6 & 5 & 5 & 0 & \\
+		6 & 8 & 8 & 0 & \\
 		\hline
-		7 & 20 & 0 & 20 & \\
+		7 & 5 & 5 & 0 & \\
 		\hline
-		8 & 30 & 5 & 25 & Menyelesaikan Bab 1 - Bab 3 pada skripsi 1 dan kurangnya pada skripsi 2\\
+		8 & 7 & 0 & 7 & \\
+		\hline
+		9 & 13 & 0 & 13 & \\
+		\hline
+		10 & 30 & 5 & 25 & Menyelesaikan Bab 1 - Bab 3 pada skripsi 1 dan kurangnya pada skripsi 2\\
 		\hline
 		Total & 100 & 53 & 47 &  \\
 		\hline
