--- a/doc/RencanaKerja/document.tex
+++ b/doc/RencanaKerja/document.tex
@@ -46,11 +46,11 @@
 
 \section{Deskripsi}
 Bluetape adalah aplikasi website FTIS UNPAR yang berguna untuk memudahkan kegiatan administrasi untuk mahasiswa FTIS.
-Bluetape dibuat menggunakan \textit{framework} \textit{Bootstrap} dan \textit{Code Igniter} versi \textit{3}.Dalam aplikasi website ini mahasiswa dapat melihat jadwal dosen, mengajukan permintaan transkrip nilai. Tata usaha dapat mengatur permintaan transkrip nilai yang diajukan oleh mahasiswa.
+Bluetape dibuat menggunakan \textit{framework} \textit{Bootstrap} dan \textit{Code Igniter} versi \textit{3}. Dalam aplikasi website ini mahasiswa dapat melihat jadwal dosen, mengajukan permintaan transkrip nilai.Tata usaha dapat menerima/menolak permintaan transkrip nilai yang diajukan oleh mahasiswa.
 
-Pada skripsi ini, \textit{libraries} yang ada pada bluetape akan di \textit{update} menjadi versi yang lebih baru. Juga akan dianalisa kekurangan pada aplikasi ini dan perbaikannya. Ada juga fitur baru yang akan ditambahkan berupa menampilkan statistik manajemen cetak transkrip dan manajemen perubahan kuliah dalam bentuk chart. Fitur tambahan selanjutnya akan dilakukan dengan meminta masukan kepada pengguna bluetape dan mengimplementasi fitur yang bisa dikerjakan.
+Pada skripsi ini, \textit{libraries} yang ada pada bluetape akan di \textit{update} menjadi versi yang lebih baru. Juga akan memperbaiki fitur--fitur yang tidak berjalan yang dilaporkan oleh pengguna. Ada juga fitur baru yang akan ditambahkan berupa menampilkan statistik manajemen cetak transkrip dan manajemen perubahan kuliah dalam bentuk chart. Fitur tambahan selanjutnya akan dilakukan dengan meminta masukan kepada pengguna bluetape dan melakukan analisa dan percangan dilanjutkan dengan mengimplementasi fitur yang bisa dikerjakan.
 
-Implementasi dari perangkat lunak ini akan menggunakan \textit{HTML}, \textit{CSS}, \textit{Javascript} untuk bagian tampilan dengan ditambahkan \textit{framework Bootstrap}, sedangkan bagian \textit{Back-end} akan menggunakan \textit{PHP , MySQL} sedangkan \textit{frameworknya} menggunakan \textit{Code Igniter}.
+Implementasi dari perangkat lunak ini akan menggunakan \textit{HTML}, \textit{CSS}, \textit{Javascript} untuk bagian tampilan dengan ditambahkan \textit{framework Bootstrap}, sedangkan bagian \textit{Back-end} akan menggunakan \textit{PHP , MYSQL} sedangkan \textit{frameworknya} menggunakan \textit{Code Igniter}.
 
 \section{Rumusan Masalah}
 Rumusan masalah yang akan dibahas sebagai berikut:
